--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,2 +1,7 @@
 @import url('common.css');
+@import url('ui.css');
+@import url('tables.css');
+@import url('metrics.css');
+@import url('controls.css');
+@import url('effects.css');
 @import url('sudoku.css');
