--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -19,7 +19,8 @@ a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
 a:focus { outline: thin dotted;text-decoration: none; }
 a:hover, a:active { outline: 0;text-decoration: none; }
-::selection { -webkit-outline-style: none; -moz-outline-style: none; outline-style: none; }
+::selection { -webkit-outline-style: none; outline-style: none;background-color: none; }
+::-moz-selection { -moz-outline-style: none; outline-style: none;background-color: none; }
 
 abbr[title] { border-bottom: 1px dotted; }
 b, strong { font-weight: bold; }
