more ready that before

--- a/assets/templates/popup.tmpl
+++ b/assets/templates/popup.tmpl
@@ -1,3 +1,1 @@
-<div id="tt">
-	<p>{{if href}}<a href="${href}" rel="external">${tip}</a>{{else}}${tip}{{/if}}</p>
-</div>
+<div id="tt"><p>{{if href}}<a href="${href}" rel="external">${tip}</a>{{else}}${tip}{{/if}}</p></div>
