--- a/assets/templates/cell.tmpl
+++ b/assets/templates/cell.tmpl
@@ -1,3 +1,1 @@
-<div class="closed item rotate">
-	<p data-item="${cell}">${cell}</p>
-</div>
+<div class="closed item rotate"><p data-item="${cell}">${cell}</p></div>
